# micropp-ompss-2-cluster

./: .gitignore  CMakeLists.txt
include/: ell.hpp  gp.hpp  micropp.hpp  tasks.hpp  util.hpp
src/: ell-common.cpp  homogenize.cpp  material.cpp  micropp.cpp  output.cpp
test/: CMakeLists.txt  Makefile  micropp2.job  micropp4.job  micropp6.job  micropp8.job  mpi-load-balance.cpp  run_1of4.sh  run_4of1.sh  run_4of2.sh
